# Bardic-Companion

./: eslint.config.js  package-lock.json  package.json  vite.config.ts
.codebuddy/: summary.md
music_generator/src/: main.py
scene_analyzer/src/: main.py
server/: package.json  pyproject.toml  tsconfig.json
server/music_service/: requirements.txt
server/music_service/src/: main.py
server/src/: server.ts
src/: env.d.ts  index.css  main.tsx
src/App/: index.css  index.tsx
src/App/MediaPlayer/: index.css  index.tsx
src/App/PromptInput/: index.css
